--- a/pipfile
+++ b/pipfile
@@ -4,17 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-flask-script = "*"
-flask-migrate = "*"
-flask-sqlalchemy = "*"
-flask-cors = "*"
-flask-jwt-extended = "*"
 mysql-connector-python = "*"
-flask-mail = "*"
 python-dotenv = "*"
 psycopg2 = "*"
 gunicorn = "*"
+Flask = "*"
+Flask-Script = "*"
+Flask-Migrate = "*"
+Flask-SQLAlchemy = "*"
+Flask-Cors = "*"
+Flask-JWT-Extended = "*"
+Flask-Mail = "*"
 
 [dev-packages]
 
